
	UserExists("name") and GroupExists("name") functions added to builtin functions.
	
	Additional octet variables added on default IPv4 address, for convenience:
	e.g.
	   590  : ipv4_2[eth1]=192.168
	   1895 : ipv4[eth1]=192.168.1.101
	   2100 : ipv4_1[eth1]=192
	   4049 : ipv4_3[eth1]=192.168.1
	

	Methods can now expand some list variables, one list only per argument set.
	This is a limited compromise pending cfengine 3.
	
2.2.1
	scli: type section added. This is a special case of shellcommands, which
	send commands to the special shell scli by Juergen Schoenwaelder for
	communicating with snmp devices.

	Code refactoring for package management.

	Bug fixes for problems introduced in 2.2.0.
	
2.2.0
	Apart from minor changes, this version is about structural internal
	changes that ease the eventual confluence with cfengine 3 and the work
	going on behind the scenes there. Every effort is being made to
	make this change easy for users and existing installations. New features
	will be introduced into 2.2.x gradually, and the new front-end will
	eventually merge into this.

	This version accompanies a new introduction to cfengine published as
	a SAGE Short Topics book.

	* Some changes

	EMANICS extensions and reference testing for context sensitive
	network navigation patterns using voluntary cooperation contracts.
	
	PrintFile("name") function added to alerts
	
	!! List expansion in editfiles actions. This is an important change 
	because it can potentially affect existing configurations that contain
	variables with a list separator in them. EditSplit is used for this.

	elsdefine fixed in tidy
	
	processes with action=warn only install fix

	ifelapsed/expireafter fixed in editfiles

	Instrumentation of copy/shellcommands measuring time/averages
	use cfshow --performance

	background=true in shellcommands was not implemented! (Fixed)

	SLES10 recognition
	RedHat/Fedora further classes

	SELinux support begun by Jeff Sheltren UCSB, who notes. 
