@@ -1075,9 +1075,9 @@ for (rp = VREQUIRED; rp != NULL; rp = rp->next)
          }
       
 #ifdef CF_OLD_DB
-      if ((errno = dbp->open(dbp,database,NULL,DB_BTREE,DB_CREATE,0644)) != 0)
+      if ((errno = (dbp->open)(dbp,database,NULL,DB_BTREE,DB_CREATE,0644)) != 0)
 #else
-      if ((errno = dbp->open(dbp,NULL,database,NULL,DB_BTREE,DB_CREATE,0644)) != 0)
+      if ((errno = (dbp->open)(dbp,NULL,database,NULL,DB_BTREE,DB_CREATE,0644)) != 0)
 #endif
          {
          snprintf(OUTPUT,CF_BUFSIZE*2,"Couldn't open database %s\n",database);
